Fixed to prevent erroneous access by storing the element that describes the internal processing in another uri

--- a/analog clock/plugins/analog_clock/img/img.qrc
+++ b/analog clock/plugins/analog_clock/img/img.qrc
@@ -1,5 +1,5 @@
 <RCC>
-	<qresource prefix="/img">
+	<qresource prefix="analog_clock/internal_/img">
 		<file>base.svg</file>
 		<file>hour.svg</file>
 		<file>minute.svg</file>
